Fixed superscripts ruining line alignment in articles.

--- a/sites/all/themes/magazeen_lite/scss/globals.scss
+++ b/sites/all/themes/magazeen_lite/scss/globals.scss
@@ -190,10 +190,9 @@ a {
   word-wrap: break-word;
 }
 
-/* super/sub scripts cause line-height to be disjoint. prevent super/sub scripts from influencing that */
-// sup {
-//   font-size: 70%;
-//   vertical-align: top;
-//   position: relative;
-//   top: -0.5em;
-// }
+/* superscripts cause line-height to be disjoint. prevent superscripts from influencing that */
+sup {
+  font-size: 0.83em;
+  vertical-align: super;
+  line-height: 0;
+}
